# swift

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml
scripts/: aurora-general.sh  chain-resume.sh  polaris-hp-layers.sh  polaris-hp-loss.sh
src/swift/: __about__.py  __init__.py  generate.py  train.py
src/swift/configs/: train.yaml
src/swift/configs/data/: defaults.yaml  era5-eagle-1.4.yaml  era5-eagle-5.6.yaml  era5-flare-0.25.yaml  era5-flare-1.4.yaml  era5-flare-5.6.yaml
src/swift/configs/experiment/: era5-swinv2-1.4-edm.yaml  era5-swinv2-1.4-scm.yaml  era5-swinv2-1.4-trigflow.yaml  era5-swinv2-5.6-distill-md.yaml  era5-swinv2-5.6-distill-sm.yaml  era5-swinv2-5.6-distill.yaml  era5-swinv2-5.6-edm.yaml  era5-swinv2-5.6-scm.yaml  era5-swinv2-5.6-trigflow.yaml  era5-unet-1.4.yaml  era5-unet-5.6-trigflow.yaml  era5-unet-5.6.yaml
src/swift/configs/finetune/: multistep.yaml
src/swift/configs/loss/: crps.yaml  edm.yaml  mse.yaml  scm.yaml  trigflow.yaml
src/swift/configs/model/: ddpmpp.yaml  edm2.yaml  swin.yaml  swinv2.yaml
src/swift/configs/optimizer/: adam.yaml  adamw.yaml  mars.yaml  (+1 more)
src/swift/data/: benchmark.py  constants.py  era5.py  h52zarr.py  process_one_step_era5.py  samplers.py  utils.py
src/swift/eval/: metrics.py  sampler.py
src/swift/generating/: diffusion.py  factory.py
src/swift/models/: abstract.py  edm2.py  precond.py  songunet.py  swin.py  swinv2.py
src/swift/plotting/: animate_panel.py  rollout.py
src/swift/training/: loss.py  trainer.py  validate.py
src/swift/utils/: helpers.py  io.py  stats.py
(+12 files in other folders)
